# ChearShop-django

./: README.txt  pyproject.toml
app/: settings.py  urls.py
goods/: admin.py  goods_items.py  models.py  urls.py  views.py
goods/templates/goods/: catalog.html  product.html
main/: urls.py  views.py
main/templates/main/: about.html  base.html  index.html
