[tool.poetry]
name = "doucoffe"
version = "0.1"
description = "coffe shop"
authors = ["Andrey C <achizhovjob@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.8"
pillow = "^10.2.0"
ipython = "^8.19.0"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
